tests/diagnostics/naming/casing/constant_not_screaming_snake/expect.txt
# exit: 1
input/main.lang0:1:1: error: constant name must be UPPER_SNAKE_CASE
  apiVersion := "v1"
  ^
